# matmul_go_brr

./: .gitignore  CMakeLists.txt  README.md  attempts_to_improve.txt  build.sh  mat_mul.cu  naive_kernel_stats_flattened.txt  plot.py  pyproject.toml  sgemm.cu
archive/: mat_mul.cu  naive_kernel_stats.txt  naive_vs_tiled.txt
src/: kernel.cuh  utils.cu  utils.cuh
src/kernel/: kernel_1.cuh  kernel_2.cuh  kernel_3.cuh  kernel_4.cuh  kernel_5.cuh  kernel_6.cuh  kernel_7.cuh
utils/: occupancy_calc.cu  profile_kernel3.cu  query_device  query_device.cu  query_device.sh
